Update withdrawal FAQs in q-and-a.mdx

--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -22,84 +22,145 @@ Welcome to the FAQ! Here you’ll find answers grouped into hubs for easier navi
 ## Ongoing Issues FAQ
 *(Temporary issues currently under investigation. Entries will be removed once resolved.)*
 
----
-
 ## Withdrawals FAQ
 
 ### How can I withdraw $FLOWER?
 Go to the Retreat (Map icon), walk up to the goblin with a wallet icon, click the $FLOWER icon, and choose **Ronin** or **Base Network**.
 
+**Also asked as:**
+- How do I cash out FLOWER?
+- How do I transfer FLOWER to my wallet?
+- How do I move FLOWER off the game?
+- How do I withdraw FLOWER to Ronin/Base?
+
 ---
 
 ### Do I need ETH to withdraw?
-Yes. ETH is required to cover gas fees. Buy ETH on the **Base Network**. Only ETH on Base is accepted.
+ETH is required to cover gas fees. Buy ETH on the **Base Network**, as only ETH on Base is accepted.
+
+**Also asked as:**
+- Why do I need ETH for withdrawals?
+- Do I need gas fees to withdraw FLOWER?
+- Can I use ETH from another network?
+- Is ETH required for FLOWER withdrawal?
 
 ---
 
 ### How to fix "shared network error"?
-Wait **14 days** from when the error first appeared. This is part of the system’s security process.
+Wait **14 days** from when the error first appeared. This waiting period is part of the system’s security process.
+
+**Also asked as:**
+- What does “shared network error” mean?
+- Why am I blocked by shared network error?
+- How long do I wait for shared network error?
+- How do I resolve shared network error?
 
 ---
 
 ### When was the "shared network error" implemented?
-On **January 12, 2026**.
+The shared network error was implemented on **January 12, 2026**.
+
+**Also asked as:**
+- When did shared network error start?
+- Since when is shared network error active?
+- What date was shared network error added?
 
 ---
 
 ### Why do I get a "shared network error" if my network isn’t shared?
 Most ISPs use **dynamic IPs**. If another player used the same IP recently, the system applies the 14‑day wait.
 
+**Also asked as:**
+- Why do I get shared network error on my own IP?
+- Why does shared network error happen if I’m not sharing?
+- How does dynamic IP cause shared network error?
+
 ---
 
 ### Do I need to change my IP?
-No. Just wait the full **two‑week period**.
+Changing your IP will not resolve the issue. You must wait the full **two‑week period**.
 
----
+**Also asked as:**
+- Can I bypass shared network error by changing IP?
+- Should I reset my router to fix shared network error?
+- Do I need a new IP to withdraw FLOWER?
 
 ## Deposits FAQ
 
 ### How can I deposit $FLOWER in‑game?
 Click the **Gem icon**, select **Deposit $FLOWER**, and choose your linked wallet or enter another address.
 
+**Also asked as:**
+- How do I add FLOWER to my account?
+- How do I transfer FLOWER into the game?
+- How do I deposit FLOWER using my wallet?
+- How do I send FLOWER to my in‑game balance?
+
 ---
 
 ### What tokens can I deposit?
-Only **$FLOWER**. Other tokens are not recognized.
+Only **$FLOWER** is accepted. Other tokens are not recognized by the deposit contract.
+
+**Also asked as:**
+- Can I deposit ETH or other tokens?
+- Are other cryptocurrencies supported?
+- What coins are accepted for deposit?
 
 ---
 
 ### I accidentally sent ETH (or another token). Can it be returned?
-No. The deposit contract only recognizes $FLOWER.
+The deposit contract only recognizes $FLOWER. Tokens sent by mistake cannot be returned.
+
+**Also asked as:**
+- I sent the wrong token, can I get it back?
+- Can mistaken deposits be refunded?
+- What happens if I send ETH instead of FLOWER?
 
 ---
 
 ### Why is only $FLOWER accepted?
-The contract is designed specifically for $FLOWER.
+The contract is designed specifically for $FLOWER. Other tokens are not supported.
+
+**Also asked as:**
+- Why can’t I deposit other tokens?
+- Why is FLOWER the only supported currency?
+- Why is ETH not accepted for deposits?
 
 ---
 
 ### My deposit isn’t showing
-Open the **Gem icon**, select **Deposit $FLOWER**, confirm the correct network, and hit **Refresh**.
+Open the **Gem icon**, select **Deposit $FLOWER**, confirm the correct network, and hit **Refresh**. If the issue persists, check your wallet transaction history to confirm the transfer.
 
----
+**Also asked as:**
+- Funds not received after crypto payment
+- I transferred tokens but they didn’t appear
+- Wallet transaction confirmed but no items credited
+- Blockchain TxID shows success but balance not updated
+- Crypto payment missing from account
 
 ## Game Errors FAQ
 
 ### I get a white screen when opening the app
-Clear your browser cache:  
+Clear your browser cache to resolve the issue:  
 - [Google Support](https://support.google.com/accounts/answer/32050)  
 - [Apple Support](https://support.apple.com/en-us/HT201265)
+
+**Also asked as:**
+- App stuck on white screen
+- Game won’t load, only white screen
+- Blank screen when opening the game
+- App doesn’t start, just shows white page
 
 ---
 
 ### I am unable to claim my marketplace sale
 Check for pending withdrawals. Complete or clear them before claiming sales.
 
----
-
-*(For shared network error details, see [Withdrawals FAQ](#withdrawals-faq).)*
-
----
+**Also asked as:**
+- Can’t claim marketplace earnings
+- Marketplace sale stuck
+- Why can’t I claim my sale?
+- Marketplace payout not working
 
 ## Account Verification FAQ
 
@@ -114,7 +175,14 @@ Check for pending withdrawals. Complete or clear them before claiming sales.
 2. Type `/verify`.  
 3. Return to the game and complete face verification.
 
-**Important:** Ensure you’re logged into the correct linked account.
+**Important:** Make sure you are logged into the correct linked account.
+
+**Also asked as:**
+- I can’t verify my Discord
+- Discord verification not working
+- Telegram verification failed
+- How do I verify my Discord/Telegram account?
+- Why can’t I complete account verification?
 
 ---
 
@@ -122,47 +190,111 @@ Check for pending withdrawals. Complete or clear them before claiming sales.
 Unlinking is currently disabled.  
 [See Discord announcement](https://discord.com/channels/880987707214544966/1174503269238837408/1396928727040131094)
 
----
+**Also asked as:**
+- How do I disconnect my Discord account?
+- How do I disconnect my Telegram account?
+- Can I unlink Telegram from the game?
+- Can I unlink Discord from the game?
+- Remove Discord/Telegram link from my account
+- Is it possible to unlink social accounts?
 
 ## Bans & Re‑Verification FAQ
 
-### I accidentally created two accounts
+### I accidentally created another account (re‑verification)
 Face verification cannot be reset or transferred. Play the new account for **30 days** before requesting re‑verification.
+
+**Also asked as:**
+- I made a second account by mistake
+- Can I move verification to another account?
+- How do I fix duplicate accounts?
+- Can I reset face verification?
 
 ---
 
-### Marketplace requires face verification
-You must actively play the new account for **30 days** before re‑verification.
+### Why does the marketplace require face verification?
+Facial verification is required in the marketplace to ensure compliance with rules against multi‑accounting. This helps maintain fairness and prevents abuse.
+
+**Also asked as:**
+- Why do I need face verification for marketplace?
+- Why is face verification required?
+- Why can’t I use the marketplace without verification?
+- Marketplace blocked until I verify my face?
+
+---
+
+### Marketplace requires face verification after creating a new account
+If you created a new account, you must actively play it for **30 days** before requesting re‑verification.
+
+**Also asked as:**
+- Marketplace won’t let me sell after making a new account
+- How do I verify for marketplace access on a new account?
+- I made a new account, why can’t I use marketplace?
+- Marketplace locked until I play 30 days?
 
 ---
 
 ### Will I get banned again if I scan my face on a new account?
-No, but you must play for **30 days** before re‑verification.
+Scanning your face on a new account will not result in a ban. The verification will not succeed until your existing face verification is cleared from your first account. Once cleared, you must actively play the new account for **30 days** before re‑verification is approved.
+
+**Also asked as:**
+- Will re‑verification cause another ban?
+- Is it safe to scan my face again?
+- Do I risk another ban with new account verification?
+
+---
+
+### Why is verification blocked on my new account?
+Verification is blocked because you are playing on a new account. You need to actively play the new account for **30 days** before re‑verification can be approved.
+
+**Also asked as:**
+- Why can’t I verify my new account?
+- Why won’t my face verification work on a new account?
 
 ---
 
 ### Can I log in on a friend’s device?
-No. This is **account sharing** and results in a permanent ban.
+Logging into a friend’s device that is already being used to play another account is considered **account sharing** and results in a permanent ban. You may, however, use your own account on your own different devices (e.g., phone, tablet, or computer).
+
+**Also asked as:**
+- Can I play on someone else’s phone/computer?
+- Will I get banned for sharing accounts?
+- Can I use my friend’s device to play?
+- Can I use multiple devices for my own account?
 
 ---
 
 ### I want to appeal my ban
-Submit a support ticket and wait for review. Appeals are case‑by‑case and permanent bans are rarely overturned.
+Submit a support ticket and wait for review. Appeals are handled case‑by‑case, and permanent bans are rarely overturned.
 
----
+**Also asked as:**
+- How do I appeal a ban?
+- Can I request ban removal?
+- Is it possible to overturn a permanent ban?
+- How do I contact support about my ban?
+
 
 ## Discontinued & Not Recommended FAQ
 
 ### I bought a Ronin Land pass
 Bronze and Silver passes have expired. They were originally distributed via airdrop and are now resold by players. SunflowerLand does not support or guarantee their validity.
 
+**Also asked as:**
+- Are Ronin Land passes still valid?
+- Can I use a Bronze or Silver Land pass?
+- What happens if I buy a Ronin Land pass?
+- Is the Ronin Land pass supported?
+
 ---
 
 ### I bought a Sunflower Land account on OpenSea
-We strongly advise against buying accounts. Metadata is often inaccurate, and items/progress may not match.  
+Buying accounts is strongly discouraged. Metadata is often inaccurate, and items or progress may not match the listing.  
 *"We do not recommend trading this NFT. Accounts may be banned and/or items may not match the account’s value."*
 
----
+**Also asked as:**
+- Can I buy a Sunflower Land account?
+- Is it safe to purchase accounts on OpenSea?
+- Why shouldn’t I buy accounts?
+- What risks are there in buying a Sunflower Land account?
 
 ## Network Transactions FAQ
 
