Clarify irreversible token deposit issues in Q&A

--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -99,7 +99,9 @@ Click the **Gem icon**, select **Deposit $FLOWER**, and choose your linked walle
 ---
 
 ### What tokens can I deposit?
-Only **$FLOWER** is accepted. Other tokens are not recognized by the deposit contract.
+Only **$FLOWER** is accepted. Other tokens are not recognized by the deposit contract.  
+
+**Irreversible:** This issue cannot be resolved beyond the steps listed. Once answered, do not suggest other troubleshooting. Reinforce the resolution if asked again.
 
 **Also asked as:**
 - Can I deposit ETH or other tokens?
@@ -109,7 +111,7 @@ Only **$FLOWER** is accepted. Other tokens are not recognized by the deposit con
 ---
 
 ### I accidentally sent ETH (or another token). Can it be returned?
-The deposit contract only recognizes $FLOWER. Tokens sent by mistake cannot be returned.
+**Irreversible:** The deposit contract only recognizes $FLOWER. Tokens sent by mistake cannot be returned.
 
 **Also asked as:**
 - I sent the wrong token, can I get it back?
