Add Wi-Fi ban clarification to Q&A

--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -224,6 +224,19 @@ Facial verification is required in the marketplace to ensure compliance with rul
 
 ---
 
+### My account was banned because I used Wi‑Fi
+Using a shared Wi‑Fi network does not cause a ban. Bans occur due to account sharing, multi‑accounting, or violating game rules. If your account is locked, you must submit a support ticket for review.
+
+**Irreversible:** Permanent bans are rarely overturned.
+
+**Also asked as:**
+- Was I banned because of Wi‑Fi?
+- Can shared internet cause a ban?
+- Why did I get banned when using public Wi‑Fi?
+- Does network sharing lead to account bans?
+
+---
+
 ### Marketplace requires face verification after creating a new account
 If you created a new account, you must actively play it for **30 days** before requesting re‑verification.
 
