Add shared network and token deposit FAQs

--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -77,6 +77,17 @@ Most ISPs use **dynamic IPs**. If another player used the same IP recently, the 
 
 ---
 
+### Why do I see a shared network error when withdrawing?
+A shared network error occurs when multiple accounts use the same IP address, often due to dynamic IPs or ISP behavior. Withdrawals are restricted for 14 days to protect against abuse.
+
+**Also asked as:**
+- Why can’t I withdraw because of shared network
+- What does shared network error mean
+- How do I fix shared Wi‑Fi withdrawal error
+- Does shared network error mean I’m banned
+
+---
+
 ### Do I need to change my IP?
 Changing your IP will not resolve the issue. You must wait the full **two‑week period**.
 
@@ -95,6 +106,19 @@ Click the **Gem icon**, select **Deposit $FLOWER**, and choose your linked walle
 - How do I transfer FLOWER into the game?
 - How do I deposit FLOWER using my wallet?
 - How do I send FLOWER to my in‑game balance?
+
+---
+
+### What tokens can I deposit into the game?
+Only $FLOWER tokens can be deposited into the game. Deposits of other tokens are not supported and cannot be recovered.
+
+**Irreversible:** Deposits of unsupported tokens cannot be reversed or refunded.
+
+**Also asked as:**
+- Can I deposit ETH or MATIC into the game
+- What crypto tokens are accepted for deposits
+- How do I deposit tokens into SunflowerLand
+- Which tokens are supported for deposits
 
 ---
 
@@ -142,6 +166,19 @@ Open the **Gem icon**, select **Deposit $FLOWER**, confirm the correct network, 
 
 ## Game Errors FAQ
 
+### Why can’t I claim my marketplace sale?
+Marketplace sales cannot be claimed if there are pending withdrawals. The claim will only succeed once all withdrawals are resolved.
+
+**Irreversible:** Marketplace sales remain locked until pending withdrawals are cleared.
+
+**Also asked as:**
+- Why is my marketplace sale stuck
+- How do I claim my marketplace earnings
+- Why can’t I withdraw my marketplace proceeds
+- Marketplace sale not claimable
+
+---
+
 ### I get a white screen when opening the app
 Clear your browser cache to resolve the issue:  
 - [Google Support](https://support.google.com/accounts/answer/32050)  
@@ -165,6 +202,19 @@ Check for pending withdrawals. Complete or clear them before claiming sales.
 - Marketplace payout not working
 
 ## Account Verification FAQ
+
+### Can I unlink my Discord or Telegram account?
+Unlinking Discord or Telegram accounts is not supported and cannot be done.
+
+**Irreversible:** Once linked, social accounts cannot be unlinked.
+
+**Also asked as:**
+- How do I disconnect my Discord account
+- Can I remove Telegram from my game account
+- Is it possible to unlink social accounts
+- Why can’t I unlink Discord or Telegram
+
+---
 
 ### I cannot verify my Discord account
 **Discord**  
@@ -336,3 +386,12 @@ Usually due to **network congestion**. If your gas price is too low, it may rema
 5. Wait until congestion eases and retry.
 
 ---
+
+### Why does my transaction stay pending?
+A transaction remains pending when the gas price is too low or the network is congested. Use the “speed up” option in your wallet to increase gas price and confirm faster.
+
+**Also asked as:**
+- Why is my crypto transaction stuck pending
+- Why won’t my transfer confirm
+- Pending blockchain transaction not processing
+- How do I fix a pending transaction
