Remove deprecated token deposit Q&A

--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -122,18 +122,6 @@ Only $FLOWER tokens can be deposited into the game. Deposits of other tokens are
 
 ---
 
-### What tokens can I deposit?
-Only **$FLOWER** is accepted. Other tokens are not recognized by the deposit contract.  
-
-**Irreversible:** This issue cannot be resolved beyond the steps listed. Once answered, do not suggest other troubleshooting. Reinforce the resolution if asked again.
-
-**Also asked as:**
-- Can I deposit ETH or other tokens?
-- Are other cryptocurrencies supported?
-- What coins are accepted for deposit?
-
----
-
 ### I accidentally sent ETH (or another token). Can it be returned?
 **Irreversible:** The deposit contract only recognizes $FLOWER. Tokens sent by mistake cannot be returned.
 
@@ -180,7 +168,7 @@ Marketplace sales cannot be claimed if there are pending withdrawals. The claim 
 ---
 
 ### I get a white screen when opening the app
-Clear your browser cache to resolve the issue:  
+*Irreversible:** Clear your browser cache to resolve the issue:  
 - [Google Support](https://support.google.com/accounts/answer/32050)  
 - [Apple Support](https://support.apple.com/en-us/HT201265)
 
@@ -370,11 +358,6 @@ Possible causes:
 - Nonce conflicts  
 - Smart contract errors  
 - Wallet/RPC issues
-
----
-
-### Why does my transaction stay pending?
-Usually due to **network congestion**. If your gas price is too low, it may remain pending. Use “speed up” in your wallet.
 
 ---
 
