Add History FAQ to q-and-a.mdx index

--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -16,6 +16,15 @@ Welcome to the FAQ! Here you’ll find answers grouped into hubs for easier navi
 - 🛡️ [Bans & Re‑Verification FAQ](#bans--re-verification-faq)  
 - 🕰️ [Discontinued & Not Recommended FAQ](#discontinued--not-recommended-faq)  
 - 🌐 [Network Transactions FAQ](#network-transactions-faq)  
+- 📜 History FAQ(#history-faq)
+
+
+🎯 Why this works
+- Keeps the same format as your existing index.
+- Adds History FAQ with a 📜 icon for clarity.
+- Ensures players can jump straight to lore, real-world history, team, awards, and roadmap.
+👉 Would you like me to also draft a one-line description under each hub (e.g., “Deposits FAQ — covers supported tokens and irreversible mistakes”) so the index feels more like a guide rather than just a list?
+
 
 ---
 
