Clarify white screen issue in Q&A

--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -176,16 +176,16 @@ Marketplace sales cannot be claimed if there are pending withdrawals. The claim 
 
 ---
 
-### I get a white screen when opening the app
-*Irreversible:** Clear your browser cache to resolve the issue:  
-- [Google Support](https://support.google.com/accounts/answer/32050)  
-- [Apple Support](https://support.apple.com/en-us/HT201265)
+### I get a white screen when opening the app  
+A white screen occurs when cached data conflicts with the game client. Clearing the browser cache restores proper functionality and allows the app to load correctly.  
 
-**Also asked as:**
-- App stuck on white screen
-- Game won’t load, only white screen
-- Blank screen when opening the game
-- App doesn’t start, just shows white page
+**Irreversible:** The issue cannot be resolved without clearing cached data; no alternative fix exists.  
+
+**Also asked as:**  
+- App stuck on white screen  
+- Game won’t load, only white screen  
+- Blank screen when opening the game  
+- App doesn’t start, just shows white page 
 
 ---
 
