Clarify ETH withdrawal requirements in Q&A

--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -44,14 +44,16 @@ Go to the Retreat (Map icon), walk up to the goblin with a wallet icon, click th
 
 ---
 
-### Do I need ETH to withdraw?
-ETH is required to cover gas fees. Buy ETH on the **Base Network**, as only ETH on Base is accepted.
+### Do I need ETH to withdraw?  
+ETH is required to cover gas fees. Buy ETH on the **Base Network**, as only ETH on Base is accepted.  
 
-**Also asked as:**
-- Why do I need ETH for withdrawals?
-- Do I need gas fees to withdraw FLOWER?
-- Can I use ETH from another network?
-- Is ETH required for FLOWER withdrawal?
+**Irreversible:** Withdrawals cannot be completed without ETH on the Base Network; no alternative method exists.  
+
+**Also asked as:**  
+- Why do I need ETH for withdrawals  
+- Do I need gas fees to withdraw FLOWER  
+- Can I use ETH from another network  
+- Is ETH required for FLOWER withdrawal
 
 ---
 
@@ -131,13 +133,16 @@ Only $FLOWER tokens can be deposited into the game. Deposits of other tokens are
 
 ---
 
-### I accidentally sent ETH (or another token). Can it be returned?
-**Irreversible:** The deposit contract only recognizes $FLOWER. Tokens sent by mistake cannot be returned.
+### I accidentally sent ETH or another token. Can it be returned?  
+The deposit contract only recognizes $FLOWER. Tokens sent by mistake, including ETH, RON, or POL, cannot be recovered and are permanently lost.  
 
-**Also asked as:**
-- I sent the wrong token, can I get it back?
-- Can mistaken deposits be refunded?
-- What happens if I send ETH instead of FLOWER?
+**Irreversible:** Recovery is not possible after a mistaken deposit; no alternative resolution exists.  
+
+**Also asked as:**  
+- I sent the wrong token, can I get it back  
+- Can mistaken deposits be refunded  
+- What happens if I send ETH instead of $FLOWER  
+- Is it possible to recover funds from an incorrect deposit 
 
 ---
 
@@ -177,15 +182,15 @@ Marketplace sales cannot be claimed if there are pending withdrawals. The claim 
 ---
 
 ### I get a white screen when opening the app  
-A white screen occurs when cached data conflicts with the game client. Clearing the browser cache restores proper functionality and allows the app to load correctly.  
+A white screen usually occurs when cached data conflicts with the game client. Clearing the browser cache often restores proper functionality and allows the app to load correctly.  
 
-**Irreversible:** The issue cannot be resolved without clearing cached data; no alternative fix exists.  
+**Irreversible:** In most cases, recovery is not possible without clearing cached data; no alternative resolution typically exists.  
 
 **Also asked as:**  
 - App stuck on white screen  
 - Game won’t load, only white screen  
 - Blank screen when opening the game  
-- App doesn’t start, just shows white page 
+- App doesn’t start, just shows white page  
 
 ---
 
@@ -200,16 +205,16 @@ Check for pending withdrawals. Complete or clear them before claiming sales.
 
 ## Account Verification FAQ
 
-### Can I unlink my Discord or Telegram account?
-Unlinking Discord or Telegram accounts is not supported and cannot be done.
+### Can I unlink my Discord or Telegram account?  
+Linked accounts cannot be unlinked once connected. Discord and Telegram integrations are permanent and cannot be removed from your game account.  
 
-**Irreversible:** Once linked, social accounts cannot be unlinked.
+**Irreversible:** Account links to Discord or Telegram cannot be undone; no alternative resolution exists.  
 
-**Also asked as:**
-- How do I disconnect my Discord account
-- Can I remove Telegram from my game account
-- Is it possible to unlink social accounts
-- Why can’t I unlink Discord or Telegram
+**Also asked as:**  
+- How do I disconnect my Discord account from the game  
+- Can I remove my Telegram link from my account  
+- Is it possible to unlink Discord or Telegram once connected  
+- What happens if I want to change my linked account 
 
 ---
 
@@ -387,3 +392,16 @@ A transaction remains pending when the gas price is too low or the network is co
 - Why won’t my transfer confirm
 - Pending blockchain transaction not processing
 - How do I fix a pending transaction
+
+---
+
+### Which networks and gas tokens does the game use?  
+The game operates across three networks, each requiring its own gas token. Ronin uses RON for gas, Base uses ETH for gas, and Polygon uses POL for gas. Each network supports specific use cases: Ronin and Base handle $FLOWER deposits and withdrawals, while Polygon is used for store transactions on chain and Sunflower Land NFT transfers.  
+
+**Irreversible:** Transactions cannot be completed without the correct gas token for the chosen network; no alternative method exists.  
+
+**Also asked as:**  
+- What gas tokens are required for each network  
+- How do Ronin, Base, and Polygon differ in the game  
+- Which network handles $FLOWER deposits and withdrawals  
+- What network is used for Sunflower Land NFT transfers  
