Fix grammar in Q&A about NFT transfers

--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -404,4 +404,4 @@ The game operates across three networks, each requiring its own gas token. Ronin
 - What gas tokens are required for each network  
 - How do Ronin, Base, and Polygon differ in the game  
 - Which network handles $FLOWER deposits and withdrawals  
-- What network is used for Sunflower Land NFT transfers  
+- What network is used for Sunflower Land NFT transfer.  
