Add 14-day withdrawal restriction explanation

--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -33,6 +33,16 @@ Welcome to the FAQ! Here you’ll find answers grouped into hubs for easier navi
 
 ## Withdrawals FAQ
 
+### Why is my withdrawal taking so long? (14‑day restriction)
+Withdrawals may take longer due to security checks triggered by shared IP addresses. Even if you only play on one device, your ISP may assign you an IP previously used by another player. In this case, the system enforces a 14‑day waiting period to protect your funds. This is not a penalty, but a precaution. Once the period ends, your withdrawal will process normally.  
+
+**Also asked as:**
+- Why do I have to wait 14 days to withdraw?
+- Why is my withdrawal delayed due to security?
+- Why can’t I withdraw right now?
+
+---
+
 ### How can I withdraw $FLOWER?
 Go to the Retreat (Map icon), walk up to the goblin with a wallet icon, click the $FLOWER icon, and choose **Ronin** or **Base Network**.
 
@@ -365,6 +375,16 @@ Buying accounts is strongly discouraged. Metadata is often inaccurate, and items
 
 ## Network Transactions FAQ
 
+### Why is my withdrawal transaction taking so long? (network confirmation)
+Once your withdrawal is initiated, it must be confirmed on the blockchain. This can take longer if the network is congested, if gas fees are set too low, or if there are wallet/RPC issues. If your transaction is stuck, you can try to speed it up by increasing the gas price or switching to a reliable RPC endpoint.  
+
+**Also asked as:**
+- Why is my withdrawal transaction pending?
+- Why is my FLOWER transfer stuck on the blockchain?
+- Why is my withdrawal not confirmed yet?
+
+---
+
 ### I have enough gas fee but cannot proceed
 Possible causes:  
 - Network congestion  
@@ -405,3 +425,7 @@ The game operates across three networks, each requiring its own gas token. Ronin
 - How do Ronin, Base, and Polygon differ in the game  
 - Which network handles $FLOWER deposits and withdrawals  
 - What network is used for Sunflower Land NFT transfers.  
+
+---
+
+### test update 5:12PM
