--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -16,7 +16,7 @@ Welcome to the FAQ! Here you’ll find answers grouped into hubs for easier navi
 - 🛡️ [Bans & Re‑Verification FAQ](#bans--re-verification-faq)  
 - 🕰️ [Discontinued & Not Recommended FAQ](#discontinued--not-recommended-faq)  
 - 🌐 [Network Transactions FAQ](#network-transactions-faq)  
-- 📜 History FAQ(#history-faq)
+- 📜 [History FAQ](#history-faq)
 
 
 🎯 Why this works
@@ -426,6 +426,10 @@ The game operates across three networks, each requiring its own gas token. Ronin
 - Which network handles $FLOWER deposits and withdrawals  
 - What network is used for Sunflower Land NFT transfers.  
 
----
+## History FAQ
 
-### test update 5:16PM
+### History test
+The history test
+
+**Also asked as:**  
+what is history
