--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -16,7 +16,8 @@ Welcome to the FAQ! Here you’ll find answers grouped into hubs for easier navi
 - 🛡️ [Bans & Re‑Verification FAQ](#bans--re-verification-faq)  
 - 🕰️ [Discontinued & Not Recommended FAQ](#discontinued--not-recommended-faq)  
 - 🌐 [Network Transactions FAQ](#network-transactions-faq)  
-- 📜 [History FAQ](#history-faq)
+- 📜 [AboutSFL FAQ](#aboutSFL-FAQ)
+- 📖 [Chapters FAQ](#Chapters-FAQ)
 
 
 🎯 Why this works
@@ -32,6 +33,19 @@ Welcome to the FAQ! Here you’ll find answers grouped into hubs for easier navi
 *(Temporary issues currently under investigation. Entries will be removed once resolved.)*
 
 ## Withdrawals FAQ
+
+### What is the cooldown period after trading an account?  
+After an account is traded, the new owner can continue playing the game but cannot sell items or withdraw assets for 90 days. This cooldown period is designed to prevent multi-account exploitation and ensure fair marketplace activity.  
+
+**Irreversible:** The 90-day cooldown is automatically enforced and cannot be bypassed or shortened once an account has been traded.  
+
+**Also asked as:**  
+- How long do I need to wait before selling after trading an account?  
+- What restrictions apply to newly traded accounts?  
+- Why can’t I withdraw after buying an account?  
+- Is there a cooldown when transferring account ownership?
+
+---
 
 ### Why is my withdrawal taking so long? (14‑day restriction)
 Withdrawals may take longer due to security checks triggered by shared IP addresses. Even if you only play on one device, your ISP may assign you an IP previously used by another player. In this case, the system enforces a 14‑day waiting period to protect your funds. This is not a penalty, but a precaution. Once the period ends, your withdrawal will process normally.  
@@ -426,10 +440,106 @@ The game operates across three networks, each requiring its own gas token. Ronin
 - Which network handles $FLOWER deposits and withdrawals  
 - What network is used for Sunflower Land NFT transfers.  
 
-## History FAQ
+## AboutSFL FAQ
 
-### History test
-The history test
+### Can I reuse Sunflower Land assets in other projects?  
+Game assets such as crops, icons, and tiles come from the SunnySide Asset Pack and cannot be reused in commercial or private projects unless purchased separately.  
+
+**Irreversible:** Unauthorized use of assets is prohibited and cannot be reversed once distributed.  
 
 **Also asked as:**  
-what is history
+- Are Sunflower Land graphics free to use?  
+- Can I use crops and tiles in my own game?  
+- What license applies to Sunflower Land assets?  
+- How do I get permission to use Bumpkin NFTs?  
+
+---
+
+### What license does Sunflower Land use?  
+Currently, Sunflower Land has no license applied. The team is evaluating options to protect the community, and until then, the code cannot be reused on other blockchains or projects.  
+
+**Irreversible:** Code reuse is prohibited until an official license is announced.  
+
+**Also asked as:**  
+- Is Sunflower Land open source?  
+- Can I fork Sunflower Land for my own project?  
+- What license governs the game code?  
+- Why is there no license applied yet?  
+
+---
+
+### How do I contribute to Sunflower Land development?  
+Developers can follow the guidelines in [CODE_CONTRIBUTING.md](https://github.com/sunflower-land/sunflower-land/blob/main/docs/CODE_CONTRIBUTING.md), while artists can refer to [ART_CONTRIBUTING.md](https://github.com/sunflower-land/sunflower-land/blob/main/docs/ART_CONTRIBUTING.md). Contributions must align with community standards and terms of service.  
+
+**Also asked as:**  
+- How can I help build Sunflower Land?  
+- Where do I find contribution rules?  
+- Can artists submit new assets?  
+- What are the steps to contribute code?  
+
+### GameplayMechanics
+
+### How do I mine resources in Sunflower Land?  
+Mining in Sunflower Land requires purchasing pickaxes from the Blacksmith. Each pickaxe allows the player to mine a specific mineral type found on the map, such as stone, iron, gold, Crimstone, or Sunstone.
+
+**Also asked as:**  
+- How do I start mining in Sunflower Land?  
+- What tools do I need for mining?  
+- What minerals can I mine?  
+- Why is mining useful in the game?  
+
+---
+
+### How do I mine stone in Sunflower Land?  
+Stone is mined using the basic Pickaxe purchased from the Blacksmith. Once the Pickaxe is owned, players can mine stone nodes on the map.
+
+**Also asked as:**  
+- How do I get stone?  
+- What pickaxe do I need for stone?  
+- Where can I find stone nodes?  
+- Why do I need stone?  
+
+---
+
+### How do I mine iron in Sunflower Land?  
+Iron is mined using the Stone Pickaxe purchased from the Blacksmith. Players can mine iron nodes once they own the correct tool.
+
+**Also asked as:**  
+- How do I get iron?  
+- What pickaxe do I need for iron?  
+- Why can’t I mine iron with a basic pickaxe?  
+- Where do iron rocks appear?  
+
+---
+
+### How do I mine gold in Sunflower Land?  
+Gold is mined using the Iron Pickaxe purchased from the Blacksmith. Players can mine gold nodes once they have the correct tool.
+
+**Also asked as:**  
+- How do I get gold?  
+- What pickaxe do I need for gold?  
+- Why can’t I mine gold yet?  
+- What is gold used for?  
+
+---
+
+### How do I mine Crimstone and Sunstone in Sunflower Land?  
+Crimstone and Sunstone are mined using the Gold Pickaxe purchased from the Blacksmith. These are the highest‑tier minerals currently available.
+
+**Also asked as:**  
+- How do I get Crimstone?  
+- How do I get Sunstone?  
+- What pickaxe do I need for Crimstone?  
+- What pickaxe do I need for Sunstone?  
+
+---
+
+## Chapters FAQ
+
+### What is Chapter 13: Crabs & Traps in Sunflower Land?  
+Chapter 13 is titled **“Crabs & Traps”** and introduces new gameplay content related to fishing, traps, and chapter‑based progression. The chapter includes new mechanics, rewards, and systems that players can engage with over a three‑month period.
+
+**Also asked as:**  
+- What is the Crabs & Traps update?  
+- What does Chapter 13 include?  
+- What new features were added in Chapter 13?  
