--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -13,11 +13,11 @@ Welcome to the FAQ! Here you’ll find answers grouped into hubs for easier navi
 - 💰 [Deposits FAQ](#deposits-faq)  
 - ⚠️ [Game Errors FAQ](#game-errors-faq)  
 - 🔑 [Account Verification FAQ](#account-verification-faq)  
-- 🛡️ [Bans & Re‑Verification FAQ](#bans--re-verification-faq)  
-- 🕰️ [Discontinued & Not Recommended FAQ](#discontinued--not-recommended-faq)  
+- 🛡️ [Bans ReVerification FAQ](#bans-reverification-faq)
+- 🕰️ [Discontinued Not Recommended FAQ](#discontinued-not-recommended-faq)
 - 🌐 [Network Transactions FAQ](#network-transactions-faq)  
-- 📜 [AboutSFL FAQ](#aboutSFL-FAQ)
-- 📖 [Chapters FAQ](#Chapters-FAQ)
+- 📜 [AboutSFL FAQ](#aboutsfl-faq)
+- 📖 [Chapters FAQ](#chapters-faq)
 
 
 🎯 Why this works
@@ -276,7 +276,7 @@ Unlinking is currently disabled.
 - Remove Discord/Telegram link from my account
 - Is it possible to unlink social accounts?
 
-## Bans & Re‑Verification FAQ
+## Bans ReVerification FAQ
 
 ### I accidentally created another account (re‑verification)
 Face verification cannot be reset or transferred. Play the new account for **30 days** before requesting re‑verification.
@@ -364,7 +364,7 @@ Submit a support ticket and wait for review. Appeals are handled case‑by‑cas
 - How do I contact support about my ban?
 
 
-## Discontinued & Not Recommended FAQ
+## Discontinued Not Recommended FAQ
 
 ### I bought a Ronin Land pass
 Bronze and Silver passes have expired. They were originally distributed via airdrop and are now resold by players. SunflowerLand does not support or guarantee their validity.
@@ -531,8 +531,6 @@ Crimstone and Sunstone are mined using the Gold Pickaxe purchased from the Black
 - How do I get Sunstone?  
 - What pickaxe do I need for Crimstone?  
 - What pickaxe do I need for Sunstone?  
-
----
 
 ## Chapters FAQ
 
