Add Uncategorized FAQ section to q-and-a.mdx

--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -18,6 +18,7 @@ Welcome to the FAQ! Here you’ll find answers grouped into hubs for easier navi
 - 🌐 [Network Transactions FAQ](#network-transactions-faq)  
 - 📜 [AboutSFL FAQ](#aboutsfl-faq)
 - 📖 [Chapters FAQ](#chapters-faq)
+- 📖 [Uncatigorized FAQ](#uncategorized-faq)
 
 
 🎯 Why this works
@@ -541,3 +542,6 @@ Chapter 13 is titled **“Crabs & Traps”** and introduces new gameplay content
 - What is the Crabs & Traps update?  
 - What does Chapter 13 include?  
 - What new features were added in Chapter 13?  
+
+## Uncatigorized FAQ
+
